src/styles/main.scss
body {
  margin: 0;
  padding: 0;
}

.jump-to-btn {
  border: 1px solid black;
  padding: 10px;
  width: 40px;
}

.active-route {
  background: lightblue;
}

.main-container {
  margin: 0;
}

.data-content {
  // margin-top: 6vh;
}

.navigation-bar {
  height: 5vh;
  width: 99.5vw;
  border: red 5px solid;
  position: fixed;
  top: 0;
  display: inline-block;
}

.content-tile {
  border: 5px dashed pink;
  background-color: lightyellow;
  min-height: 120vh; //no scrolling if less than viewport
}

.content-tile.jumped {
  background-color: lightgrey;
  // margin-top: 6vh;
}

.content-tile.first {
  margin-top: 6vh;
  background-color: green;
}

